# Compiler

./: .gitignore  CMakeLists.txt  Input-Clean.mp  Input.mp  Parser.cpp  Parser.h  Parser.h.gch  Parser.output  Parser.y  README.md  Scanner.cpp  Tasks.md  code.txt  g++.exe.lnk  main.cpp  run.bat  scanner.l  test.mp
include/: BSlogger.hpp  Node.hpp  Parser.h  Stl.h  ast.h  hash_table.h
scripts/: debug.bat  run.bat
src/AST/: Node.cpp  Node.h  ast.cpp
src/parsers/: Parser.cpp  Parser.h  Parser.output  Scanner.cpp
src/util/: icecream.hpp  lg.cpp
